--- a/index.html
+++ b/index.html
@@ -3,18 +3,113 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Basscss Starter</title>
-	<link rel="stylesheet" href="css/style.css">
+	<title>Lot333</title>
 	<link href="https://unpkg.com/basscss@8.0.2/css/basscss.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
-<div class="max-width-4 mx-auto">
-	<div class="clearfix">
-		
+<div class="header mt3 mb4">
+	<div class="max-width-4 mx-auto">
+		<div class="clearfix">
+			<div class="left">
+				<img src="images/logo.png" alt="" class="logo">
+			</div>
+			<div class="right">
+				<nav>
+				<a href="#" class="h2">Men</a>
+				<a href="#" class="h2">Women</a>
+				<a href="#" class="h2">Brands</a>
+				<a href="#" class="h2">Journal</a>
+				<a href="#" class="h2">Cart (0)</a>
+				</nav>
+			</div>
+		</div>
 	</div>
 </div>
+
+<div class="max-width-4 mx-auto">
+
+	<!-- 2up unit -->
+	<div class="clearfix mxn2">
+		<a class="block sm-col sm-col-6 px2 mb4" href="#">
+			<img src="images/index-1.jpg" class="fit" alt="">
+			<h2>Explore Hansens Garments FW18</h2>
+			<p>&mdash; Shop collection</p>
+		</a>
+		<a class="block sm-col sm-col-6 px2 mb4" href="#">
+			<img src="images/index-2.jpg" class="fit" alt="">
+			<h2>Journal: Nike launch at Lot333</h2>
+			<p>&mdash; Read more</p>
+		</a>
+	</div>
+
+	<!-- Full unit -->
+	<div class="clearfix mxn2">
+		<a class="block sm-col px2 mb4" href="#">
+			<img src="images/index-full.jpg" class="fit" alt="">
+			<h2>Tom Saunders Book</h2>
+			<p>&mdash; Shop</p>
+		</a>
+	</div>
+
+	<!-- 4up unit -->
+	<div class="clearfix mxn2">
+		<a class="block sm-col sm-col-3 px2 mb4" href="#">
+			<img src="images/index-shoe.jpg" class="fit" alt="">
+			<h2>Adidas</h2>
+			<p>React Element 87 &mdash; 1800 NOK</p>
+		</a>
+		<a class="block sm-col sm-col-3 px2 mb4" href="#">
+			<img src="images/index-shoe.jpg" class="fit" alt="">
+			<h2>Adidas</h2>
+			<p>Ultraboost &mdash; 2300 NOK</p>
+		</a>
+		<a class="block sm-col sm-col-3 px2 mb4" href="#">
+			<img src="images/index-shoe.jpg" class="fit" alt="">
+			<h2>New Balance</h2>
+			<p>Caviar &mdash; 1900 NOK</p>
+		</a>
+		<a class="block sm-col sm-col-3 px2 mb4" href="#">
+			<img src="images/index-shoe.jpg" class="fit" alt="">
+			<h2>Adidas Originals</h2>
+			<p>Pride I-5923 &mdash; 1500 NOK</p>
+		</a>
+	</div>
+
+</div>
+
+<footer>
+	<div class="max-width-4 mx-auto mb4">
+		<div class="clearfix">
+			<div class="sm-col-5 sm-col">
+				<nav>
+					<a href="#">About</a>
+					<a href="#">Contact</a>
+					<a href="#">FAQ</a>
+					<a href="#">Shipping</a>
+					<a href="#">Returns</a>
+					<a href="#">Terms & Conditions</a>
+				</nav>
+			</div>
+			<div class="sm-col-5 sm-col">
+				<div class="subscribe">
+					<input type="email" id="email" name="email">
+					<label for="email">Sign up to our newsletter</label>
+					<button>Subscribe</button>
+				</div>	
+			</div>
+			<div class="sm-col-2 sm-col">
+					<div class="social">
+						<a href="https://www.instagram.com/lot333store/" class="instagram"><img src="https://icon.now.sh/instagram" alt=""></a>
+						<a href="https://twitter.com/Lot333Bergen" class="twitter"><img src="https://icon.now.sh/twitter" alt=""></a>
+						<a href="https://www.facebook.com/Lot333-195636230464309/" class="facebook"><img src="https://icon.now.sh/facebook" alt=""></a>
+					</div>
+			</div>
+		</div>
+	</div>
+</footer>
 
 <script type="text/javascript" src='http://code.jquery.com/jquery-3.2.1.min.js'></script>
 </body>
