--- a/journal-feed.html
+++ b/journal-feed.html
@@ -35,7 +35,7 @@
 	<!-- 2up right -->
 	<div class="module split-right">
 	<div class="clearfix mxn2">
-		<div class="flex">
+		<div class="md-flex lg-flex">
 		<div class="first px2 mb4">
 			<h2>Journal: Nike launch at Lot333</h2>
 			<p class="mb2">10. mai 2018</p>
@@ -76,7 +76,7 @@
 <footer>
 	<div class="max-width-4 mx-auto mb4">
 		<div class="clearfix">
-			<div class="sm-col-5 sm-col">
+			<div class="sm-col-5 sm-col mb3">
 				<nav>
 					<a href="#">About</a>
 					<a href="#">Contact</a>
@@ -87,17 +87,21 @@
 				</nav>
 			</div>
 			<div class="sm-col-5 sm-col">
-				<div class="subscribe">
+				<div class="clearfix">
+				<div class="subscribe mb3">
 					<input type="email" id="email" name="email">
 					<label for="email">Sign up to our newsletter</label>
 					<button>Subscribe</button>
+				</div>
 				</div>	
 			</div>
 			<div class="sm-col-2 sm-col">
+				<div class="clearfix">
 					<div class="social">
 						<a href="https://www.instagram.com/lot333store/" class="instagram"><img src="https://icon.now.sh/instagram" alt=""></a>
 						<a href="https://twitter.com/Lot333Bergen" class="twitter"><img src="https://icon.now.sh/twitter" alt=""></a>
 						<a href="https://www.facebook.com/Lot333-195636230464309/" class="facebook"><img src="https://icon.now.sh/facebook" alt=""></a>
+					</div>
 					</div>
 			</div>
 		</div>
