--- a/journal-post.html
+++ b/journal-post.html
@@ -50,7 +50,7 @@
 		<!-- 2up left -->
 		<div class="split-left module">
 		<div class="clearfix mxn2">
-			<div class="flex">
+			<div class="md-flex lg-flex">
 			<div class="first px2">
 				<div class="image"><img src="images/index-tall-1.jpg" class="fit" alt=""></div>
 				<h2>Explore Hansens Garments FW18</h2>
