--- a/modules.html
+++ b/modules.html
@@ -48,7 +48,7 @@
 	<!-- 2up left -->
 	<div class="split-left">
 	<div class="clearfix mxn2">
-		<div class="flex">
+		<div class="md-flex lg-flex">
 		<div class="first px2 mb4">
 			<div class="image"><img src="images/index-tall-1.jpg" class="fit" alt=""></div>
 			<h2>Explore Hansens Garments FW18</h2>
@@ -66,7 +66,7 @@
 	<!-- 2up right -->
 	<div class="split-right">
 	<div class="clearfix mxn2">
-		<div class="flex">
+		<div class="md-flex lg-flex">
 		<div class="first px2 mb4">
 			<div class="image"><img src="images/full-shoe-2.jpg" class="fit" alt=""></div>
 			<h2>Journal: Nike launch at Lot333</h2>
