updates from 8/6 email

--- a/feed.html
+++ b/feed.html
@@ -18,8 +18,8 @@
 				<img src="images/logo.png" alt="" class="logo">
 			</div>
 			<div class="left flex-auto px4">
-				<h2 class="mt3">A.P.C.</h2>
-				<p>Jean Touitou's "Atelier de Production et de Création" (famously shortened to A.P.C.) concentrates on the ‘less is more’ approach to clothing. Founded in 1988 in Paris, the brand has transitioned from strength to strength, innovating classic men's and women's clothing using superb fabrics and simple detailing.</p>
+				<h2 class="mt0">A.P.C.</h2>
+				<p class="h3">Jean Touitou's "Atelier de Production et de Création" (famously shortened to A.P.C.) concentrates on the ‘less is more’ approach to clothing. Founded in 1988 in Paris, the brand has transitioned from strength to strength, innovating classic men's and women's clothing using superb fabrics and simple detailing.</p>
 			</div>
 			<div class="right flex-none">
 				<nav>
