--- a/journal-post.html
+++ b/journal-post.html
@@ -49,17 +49,15 @@
 
 		<!-- 2up left -->
 		<div class="split-left module">
-		<div class="clearfix mxn2">
+		<div class="clearfix mxn1">
 			<div class="md-flex lg-flex">
-			<div class="first px2">
+			<div class="first px1">
 				<div class="image"><img src="images/index-tall-1.jpg" class="fit" alt=""></div>
-				<h2>Explore Hansens Garments FW18</h2>
-				<p>&mdash; Shop collection</p>
+				<p><a href="#">Nike Reach Element 87,</a> worn by Marcus.</p>
 			</div>
-			<div class="second px2">
+			<div class="second px1">
 				<div class="image"><img src="images/full-shoe-2.jpg" class="fit" alt=""></div>
-				<h2>Journal: Nike launch at Lot333</h2>
-				<p>&mdash; Read more</p>
+				<p><a href="#">Nike Reach Element 87,</a> worn by Marcus.</p>
 			</div>
 			</div>
 		</div>
@@ -68,14 +66,11 @@
 		<p>Originally debuting at Undercover’s Paris Fashion Week show, the Undercover x Nike React Element 87 is set to release in five colorways. The sneaker features a translucent upper, exterior taping on the heel, trail running style laces, an exposed lace collar and, of course, a React sole. If that wasn’t enough to get Takahashi enthusiasts excited, the React Element 87 also features Undercover branding on the upper.</p>
 
 		<!-- Full unit -->
-		<div class="full module clearfix">
+		<div class="full module narrow clearfix">
 			<div class="sm-col">
 				<img src="images/index-full.jpg" class="fit" alt="">
-				<p><a href="#">Nike Reach Element 87,</a> worn by Marcus.</p>
 			</div>
 		</div>
-
-		<p>Originally debuting at Undercover’s Paris Fashion Week show, the Undercover x Nike React Element 87 is set to release in five colorways. The sneaker features a translucent upper, exterior taping on the heel, trail running style laces, an exposed lace collar and, of course, a React sole. If that wasn’t enough to get Takahashi enthusiasts excited, the React Element 87 also features Undercover branding on the upper.</p>
 
 	</div>
 </div>
