--- a/journal-feed.html
+++ b/journal-feed.html
@@ -34,22 +34,22 @@
 
 	<!-- 2up right -->
 	<div class="module split-right">
-	<div class="clearfix mxn2">
+	<div class="clearfix mxn1">
 		<div class="md-flex lg-flex">
-		<div class="first px2 mb4">
+		<div class="first px1 mb3">
 			<h2>Journal: Nike launch at Lot333</h2>
 			<p class="mb2">10. mai 2018</p>
 			<div class="image"><img src="images/journal-1.jpg" class="fit" alt=""></div>
-			<div class="max-width-2"><p class="mb2">Originally debuting at Undercover’s Paris Fashion Week show, the Undercover x Nike React Element 87 is set to release in five colorways. The sneaker features a translucent upper, exterior taping on the heel, trail running style laces.</p>
+			<div class="max-width-1"><p class="mb2 spaced">Originally debuting at Undercover’s Paris Fashion Week show, the Undercover x Nike React Element 87 is set to release in five colorways. The sneaker features a translucent upper, exterior taping on the heel, trail running style laces.</p>
 			<p class="right-align bold"><a href="#">&gt;&gt; Read More</a></p>
 			</div>
 			
 		</div>
-		<div class="second px2 mb4">
+		<div class="second px1 mb3">
 			<h2>Summer Readings</h2>
 			<p class="mb2">31. april 2018</p>
 			<div class="image"><img src="images/journal-2.jpg" class="fit" alt=""></div>
-			<div class="max-width-2"><p class="mb2">Originally debuting at Undercover’s Paris Fashion Week show, the Undercover x Nike React Element 87 is set to release in five colorways. The sneaker features a translucent upper, exterior taping on the heel, trail running style laces.</p>
+			<div class="max-width-1"><p class="mb2 spaced">Originally debuting at Undercover’s Paris Fashion Week show, the Undercover x Nike React Element 87 is set to release in five colorways. The sneaker features a translucent upper, exterior taping on the heel, trail running style laces.</p>
 			<p class="right-align bold"><a href="#">&gt;&gt; Read More</a></p>
 			</div>
 			
@@ -60,11 +60,11 @@
 
 	<!-- Full unit -->
 	<div class="full module clearfix mxn2">
-		<div class="sm-col px2 mb4">
+		<div class="sm-col px2 mb3">
 			<h2>Explore Bleu de Paname FW18</h2>
 			<p class="mb2">31. april 2018</p>
 			<img src="images/journal-full.jpg" class="fit" alt="">
-			<div class="max-width-2"><p class="mb2">Originally debuting at Undercover’s Paris Fashion Week show, the Undercover x Nike React Element 87 is set to release in five colorways. The sneaker features a translucent upper, exterior taping on the heel, trail running style laces.</p>
+			<div class="max-width-1"><p class="mb2 spaced">Originally debuting at Undercover’s Paris Fashion Week show, the Undercover x Nike React Element 87 is set to release in five colorways. The sneaker features a translucent upper, exterior taping on the heel, trail running style laces.</p>
 			<p class="right-align bold"><a href="#">&gt;&gt; Read More</a></p>
 			</div>
 		</div>
