--- a/brands.html
+++ b/brands.html
@@ -18,10 +18,10 @@
 			</div>
 			<div class="right">
 				<nav>
-				<a href="#" class="h2">Men</a>
-				<a href="#" class="h2">Women</a>
-				<a href="#" class="h2">Brands</a>
-				<a href="#" class="h2">Journal</a>
+				<a href="feed.html" class="h2">Men</a>
+				<a href="feed.html" class="h2">Women</a>
+				<a href="brands.html" class="h2">Brands</a>
+				<a href="journal-feed.html" class="h2">Journal</a>
 				<a href="#" class="h2">Cart (0)</a>
 				</nav>
 			</div>
@@ -34,97 +34,97 @@
 		<div class="flex flex-wrap">
 			<div class="col-6 sm-col-6 md-col-4 lg-col-2 mb2">
 				<h2>A</h2>
-				<a href="#" class="block mb1">AKIND OF GUISE</a>
-				<a href="#" class="block mb1">APC.</a>
-				<a href="#" class="block mb1">ADIDAS ORIGINALS</a>
-				<a href="#" class="block mb1">ANDERSEN-ANDERSEN</a>
-				<a href="#" class="block mb1">ARCTERYX VEILANCE</a>
+				<a href="feed.html" class="block mb1">AKIND OF GUISE</a>
+				<a href="feed.html" class="block mb1">APC.</a>
+				<a href="feed.html" class="block mb1">ADIDAS ORIGINALS</a>
+				<a href="feed.html" class="block mb1">ANDERSEN-ANDERSEN</a>
+				<a href="feed.html" class="block mb1">ARCTERYX VEILANCE</a>
 			</div>
 			<div class="col-6 sm-col-6 md-col-4 lg-col-2 mb2">
 				<h2>B</h2>
-				<a href="#" class="block mb1">BEINGHUNTED</a>
-				<a href="#" class="block mb1">BIANCA CHANDON</a>
-				<a href="#" class="block mb1">BLUE BLUE JAPAN</a>
-				<a href="#" class="block mb1">BOOKS</a>
+				<a href="feed.html" class="block mb1">BEINGHUNTED</a>
+				<a href="feed.html" class="block mb1">BIANCA CHANDON</a>
+				<a href="feed.html" class="block mb1">BLUE BLUE JAPAN</a>
+				<a href="feed.html" class="block mb1">BOOKS</a>
 			</div>
 			<div class="col-6 sm-col-6 md-col-4 lg-col-2 mb2">
 				<h2>C</h2>
-				<a href="#" class="block mb1">COMME DES GARCONS</a>
-				<a href="#" class="block mb1">COMMON PROJECTS</a>
-				<a href="#" class="block mb1">CONVERSE</a>
+				<a href="feed.html" class="block mb1">COMME DES GARCONS</a>
+				<a href="feed.html" class="block mb1">COMMON PROJECTS</a>
+				<a href="feed.html" class="block mb1">CONVERSE</a>
 			</div>
 			<div class="col-6 sm-col-6 md-col-4 lg-col-2 mb2">
 				<h2>D</h2>
-				<a href="#" class="block mb1">D.S. & DURGA</a>
-				<a href="#" class="block mb1">DRIES VAN NOTEN</a>
+				<a href="feed.html" class="block mb1">D.S. & DURGA</a>
+				<a href="feed.html" class="block mb1">DRIES VAN NOTEN</a>
 			</div>
 			<div class="col-6 sm-col-6 md-col-4 lg-col-2 mb2">
 				<h2>E</h2>
-				<a href="#" class="block mb1">ENGINEERED GARMENTS</a>
+				<a href="feed.html" class="block mb1">ENGINEERED GARMENTS</a>
 
 			</div>
 			<div class="col-6 sm-col-6 md-col-4 lg-col-2 mb2">
 				<h2>F</h2>
-				<a href="#" class="block mb1">FRANCE UNITED</a>
+				<a href="feed.html" class="block mb1">FRANCE UNITED</a>
 			</div>
 			<div class="col-6 sm-col-6 md-col-4 lg-col-2 mb2">
 				<h2>G</h2>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
 			</div>
 			<div class="col-6 sm-col-6 md-col-4 lg-col-2 mb2">
 				<h2>H</h2>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
 			</div>
 			<div class="col-6 sm-col-6 md-col-4 lg-col-2 mb2">
 				<h2>I</h2>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
 			</div>
 			<div class="col-6 sm-col-6 md-col-4 lg-col-2 mb2">
 				<h2>J</h2>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
 			</div>
 			<div class="col-6 sm-col-6 md-col-4 lg-col-2 mb2">
 				<h2>K</h2>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
 			</div>
 			<div class="col-6 sm-col-6 md-col-4 lg-col-2 mb2">
 				<h2>L</h2>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
 			</div>
 			<div class="col-6 sm-col-6 md-col-4 lg-col-2 mb2">
 				<h2>M</h2>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
 			</div>
 			<div class="col-6 sm-col-6 md-col-4 lg-col-2 mb2">
 				<h2>N</h2>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
-				<a href="#" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
+				<a href="feed.html" class="block mb1">Brand</a>
 			</div>
 
 		</div>
