--- a/feed.html
+++ b/feed.html
@@ -23,10 +23,10 @@
 			</div>
 			<div class="right flex-none">
 				<nav>
-				<a href="#" class="h2">Men</a>
-				<a href="#" class="h2">Women</a>
-				<a href="#" class="h2">Brands</a>
-				<a href="#" class="h2">Journal</a>
+				<a href="feed.html" class="h2">Men</a>
+				<a href="feed.html" class="h2">Women</a>
+				<a href="brands.html" class="h2">Brands</a>
+				<a href="journal-feed.html" class="h2">Journal</a>
 				<a href="#" class="h2">Cart (0)</a>
 				</nav>
 			</div>
@@ -39,62 +39,62 @@
 
 	<!-- 4up unit -->
 	<div class="clearfix mxn2">
-		<a class="block sm-col sm-col-3 px2 mb4" href="#">
+		<a class="block sm-col sm-col-3 px2 mb4" href="product.html">
 			<img src="images/index-tall-1.jpg" class="fit" alt="">
 			<h2>A.P.C.</h2>
 			<p>React Element 87 &mdash; 1800 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px2 mb4" href="#">
+		<a class="block sm-col sm-col-3 px2 mb4" href="product.html">
 			<img src="images/index-tall-2.jpg" class="fit" alt="">
 			<h2>A.P.C.</h2>
 			<p>Ultraboost &mdash; 2300 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px2 mb4" href="#">
+		<a class="block sm-col sm-col-3 px2 mb4" href="product.html">
 			<img src="images/index-tall-3.jpg" class="fit" alt="">
 			<h2>A.P.C.</h2>
 			<p>Caviar &mdash; 1900 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px2 mb4" href="#">
+		<a class="block sm-col sm-col-3 px2 mb4" href="product.html">
 			<img src="images/index-tall-4.jpg" class="fit" alt="">
 			<h2>A.P.C.</h2>
 			<p>Pride I-5923 &mdash; 1500 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px2 mb4" href="#">
+		<a class="block sm-col sm-col-3 px2 mb4" href="product.html">
 			<img src="images/index-tall.png" class="fit" alt="">
 			<h2>A.P.C.</h2>
 			<p>React Element 87 &mdash; 1800 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px2 mb4" href="#">
+		<a class="block sm-col sm-col-3 px2 mb4" href="product.html">
 			<img src="images/index-tall.png" class="fit" alt="">
 			<h2>A.P.C.</h2>
 			<p>Ultraboost &mdash; 2300 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px2 mb4" href="#">
+		<a class="block sm-col sm-col-3 px2 mb4" href="product.html">
 			<img src="images/index-tall.png" class="fit" alt="">
 			<h2>A.P.C.</h2>
 			<p>Caviar &mdash; 1900 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px2 mb4" href="#">
+		<a class="block sm-col sm-col-3 px2 mb4" href="product.html">
 			<img src="images/index-tall.png" class="fit" alt="">
 			<h2>A.P.C.</h2>
 			<p>Pride I-5923 &mdash; 1500 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px2 mb4" href="#">
+		<a class="block sm-col sm-col-3 px2 mb4" href="product.html">
 			<img src="images/index-tall.png" class="fit" alt="">
 			<h2>A.P.C.</h2>
 			<p>React Element 87 &mdash; 1800 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px2 mb4" href="#">
+		<a class="block sm-col sm-col-3 px2 mb4" href="product.html">
 			<img src="images/index-tall.png" class="fit" alt="">
 			<h2>A.P.C.</h2>
 			<p>Ultraboost &mdash; 2300 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px2 mb4" href="#">
+		<a class="block sm-col sm-col-3 px2 mb4" href="product.html">
 			<img src="images/index-tall.png" class="fit" alt="">
 			<h2>A.P.C.</h2>
 			<p>Caviar &mdash; 1900 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px2 mb4" href="#">
+		<a class="block sm-col sm-col-3 px2 mb4" href="product.html">
 			<img src="images/index-tall.png" class="fit" alt="">
 			<h2>A.P.C.</h2>
 			<p>Pride I-5923 &mdash; 1500 NOK</p>
