--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 			</div>
 			<div class="right">
 				<nav>
-				<a href="#" class="h2">Men</a>
-				<a href="#" class="h2">Women</a>
-				<a href="#" class="h2">Brands</a>
-				<a href="#" class="h2">Journal</a>
+				<a href="feed.html" class="h2">Men</a>
+				<a href="feed.html" class="h2">Women</a>
+				<a href="brands.html" class="h2">Brands</a>
+				<a href="journal-feed.html" class="h2">Journal</a>
 				<a href="#" class="h2">Cart (0)</a>
 				</nav>
 			</div>
@@ -33,12 +33,12 @@
 
 	<!-- 2up unit -->
 	<div class="clearfix mxn1">
-		<a class="block sm-col sm-col-6 px1 mb3" href="#">
+		<a class="block sm-col sm-col-6 px1 mb3" href="feed.html">
 			<img src="images/index-1.jpg" class="fit" alt="">
 			<h2>Explore Hansens Garments FW18</h2>
 			<p>&mdash; Shop collection</p>
 		</a>
-		<a class="block sm-col sm-col-6 px1 mb3" href="#">
+		<a class="block sm-col sm-col-6 px1 mb3" href="journal-post.html">
 			<img src="images/index-2.jpg" class="fit" alt="">
 			<h2>Journal: Nike launch at Lot333</h2>
 			<p>&mdash; Read more</p>
@@ -47,7 +47,7 @@
 
 	<!-- Full unit -->
 	<div class="clearfix mxn2">
-		<a class="block sm-col px2 mb3" href="#">
+		<a class="block sm-col px2 mb3" href="product.html">
 			<img src="images/index-full.jpg" class="fit" alt="">
 			<h2>Tom Saunders Book</h2>
 			<p>&mdash; Shop</p>
@@ -56,22 +56,22 @@
 
 	<!-- 4up unit -->
 	<div class="clearfix mxn1">
-		<a class="block sm-col sm-col-3 px1 mb3" href="#">
+		<a class="block sm-col sm-col-3 px1 mb3" href="product.html">
 			<img src="images/index-shoe.jpg" class="fit" alt="">
 			<h2>Adidas</h2>
 			<p>React Element 87 &mdash; 1800 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px1 mb3" href="#">
+		<a class="block sm-col sm-col-3 px1 mb3" href="product.html">
 			<img src="images/index-shoe.jpg" class="fit" alt="">
 			<h2>Adidas</h2>
 			<p>Ultraboost &mdash; 2300 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px1 mb3" href="#">
+		<a class="block sm-col sm-col-3 px1 mb3" href="product.html">
 			<img src="images/index-shoe.jpg" class="fit" alt="">
 			<h2>New Balance</h2>
 			<p>Caviar &mdash; 1900 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px1 mb3" href="#">
+		<a class="block sm-col sm-col-3 px1 mb3" href="product.html">
 			<img src="images/index-shoe.jpg" class="fit" alt="">
 			<h2>Adidas Originals</h2>
 			<p>Pride I-5923 &mdash; 1500 NOK</p>
