--- a/journal-feed.html
+++ b/journal-feed.html
@@ -18,10 +18,10 @@
 			</div>
 			<div class="right">
 				<nav>
-				<a href="#" class="h2">Men</a>
-				<a href="#" class="h2">Women</a>
-				<a href="#" class="h2">Brands</a>
-				<a href="#" class="h2">Journal</a>
+				<a href="feed.html" class="h2">Men</a>
+				<a href="feed.html" class="h2">Women</a>
+				<a href="brands.html" class="h2">Brands</a>
+				<a href="journal-feed.html" class="h2">Journal</a>
 				<a href="#" class="h2">Cart (0)</a>
 				</nav>
 			</div>
@@ -41,7 +41,7 @@
 			<p class="mb2">10. mai 2018</p>
 			<div class="image"><img src="images/journal-1.jpg" class="fit" alt=""></div>
 			<div class="max-width-1"><p class="mb2 spaced">Originally debuting at Undercover’s Paris Fashion Week show, the Undercover x Nike React Element 87 is set to release in five colorways. The sneaker features a translucent upper, exterior taping on the heel, trail running style laces.</p>
-			<p class="right-align bold"><a href="#">&gt;&gt; Read More</a></p>
+			<p class="right-align bold"><a href="journal-post.html">&gt;&gt; Read More</a></p>
 			</div>
 			
 		</div>
@@ -50,7 +50,7 @@
 			<p class="mb2">31. april 2018</p>
 			<div class="image"><img src="images/journal-2.jpg" class="fit" alt=""></div>
 			<div class="max-width-1"><p class="mb2 spaced">Originally debuting at Undercover’s Paris Fashion Week show, the Undercover x Nike React Element 87 is set to release in five colorways. The sneaker features a translucent upper, exterior taping on the heel, trail running style laces.</p>
-			<p class="right-align bold"><a href="#">&gt;&gt; Read More</a></p>
+			<p class="right-align bold"><a href="journal-post.html">&gt;&gt; Read More</a></p>
 			</div>
 			
 		</div>
@@ -65,7 +65,7 @@
 			<p class="mb2">31. april 2018</p>
 			<img src="images/journal-full.jpg" class="fit" alt="">
 			<div class="max-width-1"><p class="mb2 spaced">Originally debuting at Undercover’s Paris Fashion Week show, the Undercover x Nike React Element 87 is set to release in five colorways. The sneaker features a translucent upper, exterior taping on the heel, trail running style laces.</p>
-			<p class="right-align bold"><a href="#">&gt;&gt; Read More</a></p>
+			<p class="right-align bold"><a href="journal-post.html">&gt;&gt; Read More</a></p>
 			</div>
 		</div>
 	</div>
