--- a/journal-post.html
+++ b/journal-post.html
@@ -18,10 +18,10 @@
 			</div>
 			<div class="right">
 				<nav>
-				<a href="#" class="h2">Men</a>
-				<a href="#" class="h2">Women</a>
-				<a href="#" class="h2">Brands</a>
-				<a href="#" class="h2">Journal</a>
+				<a href="feed.html" class="h2">Men</a>
+				<a href="feed.html" class="h2">Women</a>
+				<a href="brands.html" class="h2">Brands</a>
+				<a href="journal-feed.html" class="h2">Journal</a>
 				<a href="#" class="h2">Cart (0)</a>
 				</nav>
 			</div>
@@ -41,7 +41,7 @@
 		<div class="full module narrow clearfix">
 			<div class="sm-col">
 				<img src="images/full-shoe-1.jpg" class="fit" alt="">
-				<p><a href="#">Nike Reach Element 87,</a> worn by Marcus.</p>
+				<p><a href="product.html">Nike Reach Element 87,</a> worn by Marcus.</p>
 			</div>
 		</div>
 
@@ -53,11 +53,11 @@
 			<div class="md-flex lg-flex">
 			<div class="first px1">
 				<div class="image"><img src="images/index-tall-1.jpg" class="fit" alt=""></div>
-				<p><a href="#">Nike Reach Element 87,</a> worn by Marcus.</p>
+				<p><a href="product.html">Nike Reach Element 87,</a> worn by Marcus.</p>
 			</div>
 			<div class="second px1">
 				<div class="image"><img src="images/full-shoe-2.jpg" class="fit" alt=""></div>
-				<p><a href="#">Nike Reach Element 87,</a> worn by Marcus.</p>
+				<p><a href="product.html">Nike Reach Element 87,</a> worn by Marcus.</p>
 			</div>
 			</div>
 		</div>
