--- a/feed.html
+++ b/feed.html
@@ -15,7 +15,7 @@
 		<div class="clearfix">
 			<div class="flex items-start">
 			<div class="left">
-				<img src="images/logo.png" alt="" class="logo">
+				<a href="index.html"><img src="images/logo.png" alt="" class="logo"></a>
 			</div>
 			<div class="left flex-auto px4">
 				<h2 class="mt0">A.P.C.</h2>
