--- a/product.html
+++ b/product.html
@@ -14,7 +14,7 @@
 	<div class="max-width-4 mx-auto">
 		<div class="clearfix">
 			<div class="left">
-				<img src="images/logo.png" alt="" class="logo">
+				<a href="index.html"><img src="images/logo.png" alt="" class="logo"></a>
 			</div>
 			<div class="right">
 				<nav>
