--- a/feed.html
+++ b/feed.html
@@ -12,12 +12,12 @@
 
 <div class="header mt3 mb4">
 	<div class="max-width-4 mx-auto">
-		<div class="clearfix">
-			<div class="flex items-start">
+		<div class="clearfix px1">
+			<div class="md-flex lg-flex items-start">
 			<div class="left">
 				<a href="index.html"><img src="images/logo.png" alt="" class="logo"></a>
 			</div>
-			<div class="left flex-auto px4">
+			<div class="left flex-auto px4 feed-intro">
 				<h2 class="mt0">A.P.C.</h2>
 				<p class="h3">Jean Touitou's "Atelier de Production et de Création" (famously shortened to A.P.C.) concentrates on the ‘less is more’ approach to clothing. Founded in 1988 in Paris, the brand has transitioned from strength to strength, innovating classic men's and women's clothing using superb fabrics and simple detailing.</p>
 			</div>
@@ -38,63 +38,63 @@
 <div class="max-width-4 mx-auto">
 
 	<!-- 4up unit -->
-	<div class="clearfix mxn1">
-		<a class="block sm-col sm-col-3 px1 mb3" href="product.html">
+	<div class="clearfix">
+		<a class="block col col-6 md-col-3 px1 mb3" href="product.html">
 			<img src="images/index-tall-1.jpg" class="fit" alt="">
 			<h2>A.P.C.</h2>
 			<p>React Element 87 &mdash; 1800 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px1 mb3" href="product.html">
+		<a class="block col col-6 md-col-3 px1 mb3" href="product.html">
 			<img src="images/index-tall-2.jpg" class="fit" alt="">
 			<h2>A.P.C.</h2>
 			<p>Ultraboost &mdash; 2300 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px1 mb3" href="product.html">
+		<a class="block col col-6 md-col-3 px1 mb3" href="product.html">
 			<img src="images/index-tall-3.jpg" class="fit" alt="">
 			<h2>A.P.C.</h2>
 			<p>Caviar &mdash; 1900 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px1 mb3" href="product.html">
+		<a class="block col col-6 md-col-3 px1 mb3" href="product.html">
 			<img src="images/index-tall-4.jpg" class="fit" alt="">
 			<h2>A.P.C.</h2>
 			<p>Pride I-5923 &mdash; 1500 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px1 mb3" href="product.html">
+		<a class="block col col-6 md-col-3 px1 mb3" href="product.html">
 			<img src="images/index-tall.png" class="fit" alt="">
 			<h2>A.P.C.</h2>
 			<p>React Element 87 &mdash; 1800 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px1 mb3" href="product.html">
+		<a class="block col col-6 md-col-3 px1 mb3" href="product.html">
 			<img src="images/index-tall.png" class="fit" alt="">
 			<h2>A.P.C.</h2>
 			<p>Ultraboost &mdash; 2300 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px1 mb3" href="product.html">
+		<a class="block col col-6 md-col-3 px1 mb3" href="product.html">
 			<img src="images/index-tall.png" class="fit" alt="">
 			<h2>A.P.C.</h2>
 			<p>Caviar &mdash; 1900 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px1 mb3" href="product.html">
+		<a class="block col col-6 md-col-3 px1 mb3" href="product.html">
 			<img src="images/index-tall.png" class="fit" alt="">
 			<h2>A.P.C.</h2>
 			<p>Pride I-5923 &mdash; 1500 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px1 mb3" href="product.html">
+		<a class="block col col-6 md-col-3 px1 mb3" href="product.html">
 			<img src="images/index-tall.png" class="fit" alt="">
 			<h2>A.P.C.</h2>
 			<p>React Element 87 &mdash; 1800 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px1 mb3" href="product.html">
+		<a class="block col col-6 md-col-3 px1 mb3" href="product.html">
 			<img src="images/index-tall.png" class="fit" alt="">
 			<h2>A.P.C.</h2>
 			<p>Ultraboost &mdash; 2300 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px1 mb3" href="product.html">
+		<a class="block col col-6 md-col-3 px1 mb3" href="product.html">
 			<img src="images/index-tall.png" class="fit" alt="">
 			<h2>A.P.C.</h2>
 			<p>Caviar &mdash; 1900 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px1 mb3" href="product.html">
+		<a class="block col col-6 md-col-3 px1 mb3" href="product.html">
 			<img src="images/index-tall.png" class="fit" alt="">
 			<h2>A.P.C.</h2>
 			<p>Pride I-5923 &mdash; 1500 NOK</p>
