--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <div class="header mt3 mb4">
 	<div class="max-width-4 mx-auto">
-		<div class="clearfix">
+		<div class="clearfix px1">
 			<div class="left">
 				<a href="index.html"><img src="images/logo.png" alt="" class="logo"></a>
 			</div>
@@ -32,7 +32,7 @@
 <div class="max-width-4 mx-auto">
 
 	<!-- 2up unit -->
-	<div class="clearfix mxn1">
+	<div class="clearfix">
 		<a class="block sm-col sm-col-6 px1 mb3" href="feed.html">
 			<img src="images/index-1.jpg" class="fit" alt="">
 			<h2>Explore Hansens Garments FW18</h2>
@@ -46,8 +46,8 @@
 	</div>
 
 	<!-- Full unit -->
-	<div class="clearfix mxn2">
-		<a class="block sm-col px2 mb3" href="product.html">
+	<div class="clearfix">
+		<a class="block sm-col px1 mb3" href="product.html">
 			<img src="images/index-full.jpg" class="fit" alt="">
 			<h2>Tom Saunders Book</h2>
 			<p>&mdash; Shop</p>
@@ -55,7 +55,7 @@
 	</div>
 
 	<!-- 4up unit -->
-	<div class="clearfix mxn1">
+	<div class="clearfix">
 		<a class="block sm-col sm-col-3 px1 mb3" href="product.html">
 			<img src="images/index-shoe.jpg" class="fit" alt="">
 			<h2>Adidas</h2>
