--- a/journal-feed.html
+++ b/journal-feed.html
@@ -12,7 +12,7 @@
 
 <div class="header mt3 mb4">
 	<div class="max-width-4 mx-auto">
-		<div class="clearfix">
+		<div class="clearfix px1">
 			<div class="left">
 				<a href="index.html"><img src="images/logo.png" alt="" class="logo"></a>
 			</div>
@@ -34,7 +34,7 @@
 
 	<!-- 2up right -->
 	<div class="module split-right">
-	<div class="clearfix mxn1">
+	<div class="clearfix">
 		<div class="md-flex lg-flex">
 		<div class="item first px1 mb3">
 			<h2>Journal: Nike launch at Lot333</h2>
@@ -59,8 +59,8 @@
 	</div>
 
 	<!-- Full unit -->
-	<div class="item full module clearfix mxn2">
-		<div class="sm-col px2 mb3">
+	<div class="item full module clearfix">
+		<div class="sm-col px1 mb3">
 			<h2>Explore Bleu de Paname FW18</h2>
 			<p class="mb3">31. april 2018</p>
 			<img src="images/journal-full.jpg" class="fit" alt="">
@@ -75,7 +75,7 @@
 
 <footer>
 	<div class="max-width-4 mx-auto mb4">
-		<div class="clearfix">
+		<div class="clearfix px1">
 			<div class="sm-col-5 sm-col mb3">
 				<nav>
 					<a href="#">About</a>
