--- a/modules.html
+++ b/modules.html
@@ -12,7 +12,7 @@
 
 <div class="header mt3 mb4">
 	<div class="max-width-4 mx-auto">
-		<div class="clearfix">
+		<div class="clearfix px1">
 			<div class="left">
 				<a href="index.html"><img src="images/logo.png" alt="" class="logo"></a>
 			</div>
@@ -32,7 +32,7 @@
 <div class="max-width-4 mx-auto">
 
 	<!-- 2up even -->
-	<div class="clearfix mxn1">
+	<div class="clearfix">
 		<div class="sm-col sm-col-6 px1 mb3">
 			<img src="images/index-1.jpg" class="fit" alt="">
 			<h2>Explore Hansens Garments FW18</h2>
@@ -47,7 +47,7 @@
 
 	<!-- 2up left -->
 	<div class="split-left">
-	<div class="clearfix mxn1">
+	<div class="clearfix">
 		<div class="md-flex lg-flex">
 		<div class="first px1 mb3">
 			<div class="image"><img src="images/index-tall-1.jpg" class="fit" alt=""></div>
@@ -65,7 +65,7 @@
 
 	<!-- 2up right -->
 	<div class="split-right">
-	<div class="clearfix mxn1">
+	<div class="clearfix">
 		<div class="md-flex lg-flex">
 		<div class="first px1 mb3">
 			<div class="image"><img src="images/full-shoe-2.jpg" class="fit" alt=""></div>
@@ -82,7 +82,7 @@
 	</div>
 
 	<!-- Full unit -->
-	<div class="clearfix mxn1">
+	<div class="clearfix">
 		<div class="sm-col px1 mb3">
 			<img src="images/index-full.jpg" class="fit" alt="">
 			<h2>Tom Saunders Book</h2>
