--- a/brands.html
+++ b/brands.html
@@ -12,7 +12,7 @@
 
 <div class="header mt3 mb4">
 	<div class="max-width-4 mx-auto">
-		<div class="clearfix">
+		<div class="clearfix px1">
 			<div class="left">
 				<a href="index.html"><img src="images/logo.png" alt="" class="logo"></a>
 			</div>
@@ -30,7 +30,7 @@
 </div>
 
 <div class="max-width-4 mx-auto brands">
-	<div class="clearfix">
+	<div class="clearfix px1">
 		<div class="flex flex-wrap">
 			<div class="col-6 sm-col-6 md-col-4 lg-col-2 mb2">
 				<h2>A</h2>
