--- a/journal-post.html
+++ b/journal-post.html
@@ -12,7 +12,7 @@
 
 <div class="header mt3 mb4">
 	<div class="max-width-4 mx-auto">
-		<div class="clearfix">
+		<div class="clearfix px1">
 			<div class="left">
 				<a href="index.html"><img src="images/logo.png" alt="" class="logo"></a>
 			</div>
@@ -30,7 +30,7 @@
 </div>
 
 <div class="max-width-4 mx-auto">
-	<div class="post clearfix">
+	<div class="post clearfix px1">
 
 		<h1>Summer Readings</h1>
 		<p class="small">10. mai 2018</p>
