--- a/product.html
+++ b/product.html
@@ -10,9 +10,9 @@
 
 <body>
 
-<div class="header mt3 mb4">
+<div class="header mt3 mb4 product">
 	<div class="max-width-4 mx-auto">
-		<div class="clearfix">
+		<div class="clearfix px1">
 			<div class="left">
 				<a href="index.html"><img src="images/logo.png" alt="" class="logo"></a>
 			</div>
@@ -31,15 +31,18 @@
 
 <div class="max-width-4 mx-auto">
 
-	<div class="clearfix mxn2">
-		<div class="col-right col-12 sm-col-4 px2 mb4" href="#">
+	<div class="clearfix">
+		
+		<div class="sm-col sm-col-8 px1" href="#">
+			<img src="images/full-shoe-1.jpg" class="fit mb3" alt="">
+			<img src="images/full-shoe-2.jpg" class="fit mb3 xs-hide sm-hide" alt="">
+		</div>
+
+		<div class="col col-12 sm-col-4 px2 mb4" href="#">
 			<h2>Shopify Bits Go Here</h2>
 			<p>(They'll be pinned)</p>
 		</div>
-		<div class="sm-col sm-col-8 px2" href="#">
-			<img src="images/full-shoe-1.jpg" class="fit mb3" alt="">
-			<img src="images/full-shoe-2.jpg" class="fit mb3" alt="">
-		</div>
+
 	</div>
 
 </div>
