--- a/brands.html
+++ b/brands.html
@@ -132,9 +132,9 @@
 </div>
 
 <footer>
-	<div class="max-width-4 mx-auto mb4">
+	<div class="max-width-4 mx-auto mb4 px1">
 		<div class="clearfix">
-			<div class="sm-col-5 sm-col">
+			<div class="sm-col-5 sm-col mb3">
 				<nav>
 					<a href="#">About</a>
 					<a href="#">Contact</a>
