--- a/index.html
+++ b/index.html
@@ -56,22 +56,22 @@
 
 	<!-- 4up unit -->
 	<div class="clearfix">
-		<a class="block sm-col sm-col-3 px1 mb3" href="product.html">
+		<a class="block col col-6 md-col-3 px1 mb3" href="product.html">
 			<img src="images/index-shoe.jpg" class="fit" alt="">
 			<h2>Adidas</h2>
 			<p>React Element 87 &mdash; 1800 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px1 mb3" href="product.html">
+		<a class="block col col-6 md-col-3 px1 mb3" href="product.html">
 			<img src="images/index-shoe.jpg" class="fit" alt="">
 			<h2>Adidas</h2>
 			<p>Ultraboost &mdash; 2300 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px1 mb3" href="product.html">
+		<a class="block col col-6 md-col-3 px1 mb3" href="product.html">
 			<img src="images/index-shoe.jpg" class="fit" alt="">
 			<h2>New Balance</h2>
 			<p>Caviar &mdash; 1900 NOK</p>
 		</a>
-		<a class="block sm-col sm-col-3 px1 mb3" href="product.html">
+		<a class="block col col-6 md-col-3 px1 mb3" href="product.html">
 			<img src="images/index-shoe.jpg" class="fit" alt="">
 			<h2>Adidas Originals</h2>
 			<p>Pride I-5923 &mdash; 1500 NOK</p>
@@ -81,9 +81,9 @@
 </div>
 
 <footer>
-	<div class="max-width-4 mx-auto mb4">
+	<div class="max-width-4 mx-auto mb4 px1">
 		<div class="clearfix">
-			<div class="sm-col-5 sm-col">
+			<div class="sm-col-5 sm-col mb3">
 				<nav>
 					<a href="#">About</a>
 					<a href="#">Contact</a>
