--- a/journal-post.html
+++ b/journal-post.html
@@ -76,9 +76,9 @@
 </div>
 
 <footer>
-	<div class="max-width-4 mx-auto mb4">
+	<div class="max-width-4 mx-auto mb4 px1">
 		<div class="clearfix">
-			<div class="sm-col-3 sm-col">
+			<div class="sm-col-5 sm-col mb3">
 				<nav>
 					<a href="#">About</a>
 					<a href="#">Contact</a>
@@ -88,14 +88,14 @@
 					<a href="#">Terms & Conditions</a>
 				</nav>
 			</div>
-			<div class="sm-col-3 sm-col">
+			<div class="sm-col-5 sm-col">
 				<div class="subscribe">
 					<input type="email" id="email" name="email">
 					<label for="email">Sign up to our newsletter</label>
 					<button>Subscribe</button>
 				</div>	
 			</div>
-			<div class="sm-col-6 sm-col">
+			<div class="sm-col-2 sm-col">
 					<div class="social">
 						<a href="https://www.instagram.com/lot333store/" class="instagram"><img src="https://icon.now.sh/instagram" alt=""></a>
 						<a href="https://twitter.com/Lot333Bergen" class="twitter"><img src="https://icon.now.sh/twitter" alt=""></a>
