--- a/journal-feed.html
+++ b/journal-feed.html
@@ -74,8 +74,8 @@
 </div>
 
 <footer>
-	<div class="max-width-4 mx-auto mb4">
-		<div class="clearfix px1">
+	<div class="max-width-4 mx-auto mb4 px1">
+		<div class="clearfix">
 			<div class="sm-col-5 sm-col mb3">
 				<nav>
 					<a href="#">About</a>
@@ -87,21 +87,17 @@
 				</nav>
 			</div>
 			<div class="sm-col-5 sm-col">
-				<div class="clearfix">
-				<div class="subscribe mb3">
+				<div class="subscribe">
 					<input type="email" id="email" name="email">
 					<label for="email">Sign up to our newsletter</label>
 					<button>Subscribe</button>
-				</div>
 				</div>	
 			</div>
 			<div class="sm-col-2 sm-col">
-				<div class="clearfix">
 					<div class="social">
 						<a href="https://www.instagram.com/lot333store/" class="instagram"><img src="https://icon.now.sh/instagram" alt=""></a>
 						<a href="https://twitter.com/Lot333Bergen" class="twitter"><img src="https://icon.now.sh/twitter" alt=""></a>
 						<a href="https://www.facebook.com/Lot333-195636230464309/" class="facebook"><img src="https://icon.now.sh/facebook" alt=""></a>
-					</div>
 					</div>
 			</div>
 		</div>
